# ocaml-s3

./: LICENSE  README.md  dune-project  s3.opam  s3cli.opam
lib/: auth.ml  auth.mli  client.ml  client.mli  credentials.ml  credentials.mli  dune  xml_util.ml  xml_util.mli
scripts/: run-integration-tests.sh
test/: dune  test_integration.ml  test_unit.ml
